// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`nav links authenticated matches snapshot 1`] = `
<div
  className="sc-fzplWN ccPsUu"
  onClick={[Function]}
>
  <div>
    <button
      className="sc-AxjAm kxpUMR"
    >
      Features
    </button>
    <button
      className="sc-AxjAm kxpUMR"
    >
      Pricing
    </button>
    <button
      className="sc-AxjAm kxpUMR resourcesBtn"
    >
      Resources
    </button>
  </div>
  <div
    data-testid="authBtns"
  >
    <a
      href="/logout"
      onClick={[Function]}
    >
      <button
        className="sc-AxirZ dVJbcR"
      >
        Logout
      </button>
    </a>
  </div>
</div>
`;

exports[`nav links not-authenticated matches snapshot 1`] = `
<div
  className="sc-fzplWN ccPsUu"
  onClick={[Function]}
>
  <div>
    <button
      className="sc-AxjAm kxpUMR"
    >
      Features
    </button>
    <button
      className="sc-AxjAm kxpUMR"
    >
      Pricing
    </button>
    <button
      className="sc-AxjAm kxpUMR resourcesBtn"
    >
      Resources
    </button>
  </div>
  <div
    data-testid="authBtns"
  >
    <a
      href="/login"
      onClick={[Function]}
    >
      <button
        className="sc-AxjAm kxpUMR"
      >
        Login
      </button>
    </a>
    <a
      href="/signup"
      onClick={[Function]}
    >
      <button
        className="sc-AxirZ dVJbcR"
      >
        Sign Up
      </button>
    </a>
  </div>
</div>
`;
